fixed homepage ordering, aligned dates left

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -44,3 +44,7 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
+
+.datestamp{
+    text-align: right;
+}
